# hidet

./: .gitignore  .gitmodules  CMakeLists.txt  CODE_OF_CONDUCT.md  MANIFEST.in  README.md  atomic_red.py  commutative_law.py  config.cmake  pyproject.toml  requirements-dev.txt  requirements.txt  requirements_full.txt  setup.py  test.c
.github/: Dockerfile  copy-pr-bot.yaml  release.yml  requirements-ci.txt
.github/ISSUE_TEMPLATE/: bug_report.md
.github/actions/: action.yaml  build-wheel.yaml
.github/base-image/: Dockerfile
.github/scripts/: build_wheel.sh  cuda_cleanup.py  db_utils.py  run_tests.py  set_gpu_types.sh  set_test_matrix.py  start_instances.py  stop_instances.py  upload_results.py
.github/workflows/: benchmark.yaml  build-docs.yaml  check-pr-title.yaml  docs.yaml  fast_tests.yaml  launch.yaml  lint.yaml  nightly.yaml  publish-centml-pypi.yaml  publish-pypi.yaml  regression.yaml  release.yaml  sync.yaml  tests.yaml  upload-dev-wheel.yaml
apps/compile_server/: Dockerfile  README.md  app.py  requirements.txt  run.py  run.sh
bench/: add.py  mm.py  mma.py  mma_inlined.py  test_fuse.py
cmake/: TVM.cmake
docs/: Makefile  requirements.txt
docs/source/: clear-hidet-cache.py  conf.py  index.rst  references.bib
examples/distributed/: resnet.py  test.py
examples/gpt-2/: README.md  encoder.py  gpt_model.py  main.py  requirements.txt  utils.py
examples/matmul/: main.py
examples/quantization/: gpt2.py  gpt2_performance.py
examples/stable-diffusion/: README.md  main.py  requirements.txt
experiments/auto_scheduler_demos/: main.py
experiments/baorun/: demo_c2dt.py  main.py
experiments/baselines/: main.py
experiments/bench/: block.py  blocks.py  end2end.py  manual.py
experiments/benchmark/: _bench_model.py  analyze.py  bench_model.py  bench_operator.py  blocks.py  end2end.py  main.py  repeat.sh  rerun.sh  resnet50_conv2ds.py  setgan.py  sop.py  space_efficiency.py  space_sensitivity.py
experiments/bert_demos/: main.py
experiments/conv_demos/: main.py
experiments/cuda_code/: CMakeLists.txt  build.sh  main.cu  note.md
experiments/cuda_code/e1/: build.sh  main.cu
experiments/cuda_code/e2/: build.sh  main.cu
experiments/cuda_code/e3_mma/: e3.h  main.cpp  mma_m8n8k4_fp16.cu  wmma_m16n16k16_fp16.cu
experiments/cuda_code/e4_play/: main.cu
experiments/cuda_code/e5_cutlass/: compile.sh  main.cu
experiments/cuda_code/e6_cutlass_tf32/: gemm.cu  gemm.h  main.cu
experiments/cuda_code/e7_mma/: main.cu
experiments/cuda_code/e8_static_gmem/: main.cu
experiments/demo/: main.py
experiments/demos/: main.py
experiments/func_demos/: main.py
experiments/fuse_demos/: main.py
experiments/hidet_script/: main.py
experiments/matmul-parallel-k/: main-demo.py  main.py
experiments/mm_demos/: analyze.py  main.py
experiments/onnx_demos/: main.py
experiments/paper_figures/: all_run.sh  common.py  end2end.py  exp_batch_size.py  exp_resnet50_conv2ds.py  exp_space_efficiency.py  exp_trt.py  input_sensitivity.py  motivation_autotvm_space.py  tuning_time.py
experiments/play/: CMakeLists.txt  demo_test.py  main.cpp  runtime.cpp  runtime.h  test.py
experiments/pool2d_demos/: main.py
experiments/refactor/: main.py
experiments/script_demo/: main.py
experiments/serialize_demos/: main.py
experiments/softmax_demos/: main.py
experiments/task_demos/: main.py
experiments/torch_demos/: main.py
experiments/tos_demos/: main.py
experiments/tvm_demos/: main.py
experiments/unet_demos/: main.py
experiments/winograd_demos/: main.py
gallery/: quick-start.py
gallery/developer-guides/: add-new-operator-compute-definition.py  add-new-operator-rule-based.py  add-new-operator-template-based.py  add-operator-resolve-rule.py  add-subgraph-rewrite-rule.py  add-torch-operator-mapping.py  hidet-script-dynamic-kernel.py
gallery/getting-started/: quick-start.py
gallery/hidet-script/: 0-hello-world.py  1-scalar-addition.py  2-vector-addition.py  3-kernel-functions.py  4-naive-matmul.py  5-efficient-matmul.py  5-layout.py
gallery/how-to-guides/: add-new-operator-compute-definition.py  add-new-operator-rule-based.py  add-new-operator-template-based.py  add-new-operator.py  add-operator-resolve-rule.py  add-subgraph-rewrite-rule.py  pipeline_inference.py  visualize-flow-graph.py
gallery/tutorials/: optimize-onnx-model.py  optimize-pytorch-model.py  optimize-pytorch-model.py.backup  run-onnx-model.py  run_onnx_model.py
include/hidet/: common.h  cuda_utils.h  cudnn_common.h  logging.h  packedfunc.h  runtime.h  tensor.h
python/: compiled_model.tar  exp_err.py  exp_noerr.py  five-general.py  five-pack-align.py  five-pack.py  five-pack2.py  five-packA.py  five2.py  five3.py  five4.py  five_loops.py  general-refactor.py  m616-l2p16.py  m616-l2p24.py  m616-pl2.py  m616-pl3.py  mat_new.py  matmul_1024x1024x1024.json  matmul_384x256x256.json  matmul_512x512x512.json  matmul_TIR_1024x1024x1024  matmul_TIR_384x256x256  matmul_TIR_512x512x512  micro-10x8.py  micro-6x16.py  micro616-parallel.py  null_exp.py  opt-kernel.py  opt8.py  opt88.py  perf.txt  refactor-macro.py  refactor-micro.py  setup.py  test_layernorm.py  test_matmul_x86.py  try_batch_norm.py  try_dynamic_softmax.py  try_group_norm.py  (+8 more)
python/hidet/: __init__.py  array_api.py  common.py  driver.py  libinfo.py  logging.py  mat_new.py  option.py  version.py
python/hidet_models/: llama.py
scripts/: build_wheel.sh  lock_gpu_clocks.sh  query_gpu_clocks.sh  query_gpu_status.sh  repeat.sh  reset_gpu_clocks.sh  update_version.py  upload_wheel.sh
scripts/bench/: README.md  benchmark.py  requirements.txt  run.py
scripts/ci/: benchmark.py
scripts/lint/: .clang-format  _format.py  add_copyright.py  format.sh  lint.sh  pylintrc
scripts/nightly-builds/: README.md  add-crontab-record.sh  update-nightly.sh
scripts/regression/: email_sender.py  gen_json.py  model_performance.py  op_performance.py  performance.py  regression_data.json  regression_data_dev.json  requirements.txt  result_entry.py  run.py
tests/: README.md  conftest.py  cpu_e2e_test.py  cpue2e.txt
tools/: setup.py
(+1632 files in other folders)
