[build-system]
requires = ["setuptools", "cmake", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "hidet"
dynamic = ["version"]
description = "Hidet: a compilation-based DNN inference framework."
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.9"
license = { text = "Apache-2.0"}
keywords = ["Deep Learning", "Machine Learning", "Neural Network", "Inference", "Compiler"]
authors = [
  { name = "CentML Inc." }
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Intended Audience :: Education",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: Apache Software License",
  "Topic :: Scientific/Engineering",
  "Topic :: Scientific/Engineering :: Mathematics",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Topic :: Software Development",
  "Topic :: Software Development :: Libraries",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Programming Language :: C++",
  "Programming Language :: Python :: 3",
  "Operating System :: POSIX :: Linux"
]
dependencies = [
  "numpy>=1.23",  # numpy 1.23 is required for dlpack support
  "psutil",  # used for query available memory
  "tabulate",  # used for print table
  "tqdm",  # show progress bar
  "nvtx",  # used to annotate the scope of events in host process, which can be visualized in Nsight System.
  "click",  # for command line interface
  "packaging",  # for package version check
  "requests",  # download files from url
  "filelock",  # lock file on disk
  "cuda-python>=11.6.1",  # for cuda runtime api
  "hip-python-fork",  # for hip runtime api, need converted to hip-python when AMD release hip-python on PyPI
  "lark",  # for parser
  "tomlkit",  # for configuration store/load on disk
  "scipy",  # we used some scipy functions in hidet
  "gitpython",  # used to detect whether hidet is installed from a local repo or not, and determine default cache dir
  "importlib_metadata", # check installed packages
  "torch>=2.3.0",
  "networkx", # for flow graph visualization
]

[project.optional-dependencies]
dev = [
  "pytest==7.2",  # python test
  "black==25.1.0", # formatter
  "pylint==2.13.9",  # linter

  # check the correctness of onnx frontend
  "onnx",
  "onnxruntime-gpu",

  # model zoo
  "torch>=2.3.0",
  "torchvision",
  "torchaudio",
  "datasets",
  "diffusers",
  "transformers",
  "sentencepiece",
  "sacremoses",
  "accelerate",

  # utilities
  "pygraphviz",

  "einops",
]

[project.urls]
Homepage = "https://github.com/hidet-org/hidet"
Documentation = "https://hidet.org"

[project.scripts]
hidet = "hidet.cli.main:main"

[project.entry-points.torch_dynamo_backends]
hidet = "hidet.graph.frontend.torch.dynamo_backends:hidet_backend"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages]
find = { where = ["python"] }

[tool.setuptools.package-dir]
"" = "python"

[tool.setuptools_scm]
